# Distributed-Image-Sharing-Cloud

./: .demo_pids  .fuse_hidden0001527300000001  .gitignore  CONCURRENT_STRESS_TEST_GUIDE.md  Cargo.toml  DEPLOYMENT_GUIDE.md  DESIGN_DOCUMENT.md  DISTRIBUTED_SETUP_GUIDE.md  ENCRYPTION_SIZE_EXPLAINED.md  FAILURE_SIMULATION_GUIDE.md  FIXES_SUMMARY.md  FIX_IMAGE_ISSUE.md  GUI_README.md  LOAD_BALANCING_DIAGNOSTICS.md  LOAD_BALANCING_OPTIMIZATION.md  NEW_ENCRYPTION_METHOD.md  NODE_COMMUNICATION_FIXES.md  PRODUCTION_DEPLOYMENT.md  QUICKSTART.md  QUICK_START.md  README.md  REQUEST_FLOW_DETAILED.md  SETUP.md  STRESS_TESTING_GUIDE.md  STRESS_TEST_QUICK_REF.md  TEST_ENCRYPTION_README.md  UDP_IMAGE_FIX.md  analyze_stress_results.py  cleanup.sh  collect_failure_data.sh  create_test_image.py  get_wifi_ip.sh  production_setup.sh  quick_test.sh  run_demo.sh  run_gui_demo.sh  run_local_demo.sh  run_nodes.sh  run_stress_tests.sh  setup_distributed.sh  (+9 more)
multiple_img_testing/: README.md  START_HERE.md  UPDATES.md  analyze_metrics.py  config.json  config_backup.json  decrypt_all.py  generate_test_image.py  quick_test.sh  run_full_test.sh  test_coordinator.py  test_worker.py
single_img_testing/: COMPLETE_GUIDE.md  INSTRUCTIONS.sh  QUICK_REFERENCE.md  README.md  START_HERE.md  create_test_image.py  decrypt_client.py  generate_720p_image.py  make_small_image.py  make_tiny_image.py  make_ultra_tiny_image.py  run_test.sh  simple_run.sh  test_client.py
src/: chunking.rs  client.rs  election.rs  encryption.rs  gui_client.rs  gui_server.rs  lib.rs  messages.rs  metrics.rs  node.rs
(+4 files in other folders)
